2. Solidity Backened Setup

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1,6 +1,17 @@
-.App{
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-    font-weight: 600;
-}
+main {
+    margin-top: 60px;
+  }
+  
+  form {
+    width: 350px;
+    margin-bottom: 10px;
+  }
+  
+  ul {
+    margin-bottom: 0px;
+  }
+  
+  #completedTaskList .content {
+    color: grey;
+    text-decoration: line-through;
+  }
